--- a/AtlasSNS/public/css/logout.css
+++ b/AtlasSNS/public/css/logout.css
@@ -6,5 +6,77 @@ html{
 
 body{
     height: 100%;
-    background: #186AC9;
+    background-color: #0270f5;
+    background-image: linear-gradient(0deg, #f5e940 0%, #0270f5 100%);
+}
+img{
+    height: 50px;
+}
+header{
+    padding: 10% 0 5% 0;
+    text-align: center;
+    color: aliceblue;
+}
+header p{
+    font-size: 50px;
+}
+#container {
+    width: 20%;
+    background: rgba(51, 112, 121, 0.4);
+    margin: 0 auto;
+    color: aliceblue;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-size: 20px;
+    line-height: 30px;
+    border-radius: 10px;
+}
+#container p{
+    text-align: center;
+    margin-top: 5px;
+}
+#container .input{
+    height: 20px;
+    width: 80%;
+    border-radius: 10px;
+}
+#container .submit{
+    margin-left: 50%;
+    margin-top: 5%;
+    color: #fff;
+    background-color: red;
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 20px;
+}
+a{
+    color: aliceblue;
+    font-size: 15px;
+}
+.form{
+    padding-top: 30px;
+    padding-left: 0;
+    margin-left: 15%;
+    font-size: 15px;
+}
+#clear .add{
+    font-size: 15px;
+    font-weight: 900;
+    line-height: 100%;
+}
+#clear .coment{
+    padding-top: 20px;
+    font-size: 15px;
+    line-height: 100%;
+}
+#clear .btn{
+    margin-left: 25%;
+        color: #fff;
+        background-color: red;
+        width: 120px;
+        height: 40px;
+        border-radius: 10px;
+        font-size: 20px;
+        margin-top: 20px;
 }
