--- a/AtlasSNS/public/css/logout.css
+++ b/AtlasSNS/public/css/logout.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
 html{
-    height: 100%;
 }
 
 body{
     height: 100%;
+    min-height: 100vh;
     background-color: #0270f5;
     background-image: linear-gradient(0deg, #f5e940 0%, #0270f5 100%);
 }
@@ -30,6 +30,7 @@ header p{
     font-size: 20px;
     line-height: 30px;
     border-radius: 10px;
+    margin-bottom: 30px;
 }
 #container p{
     text-align: center;
